# day-tracker

./: CMakeLists.txt  README.md  default_config.json  request_examples.txt  test.json
src/: account.c  api.c  cjson_helper.c  config.c  day.c  fnvhash.c  generate_token.c  main.c  password.c  responses.c  token.c
src/include/: account.h  api.h  cjson_helper.h  config.h  day.h  fnvhash.h  generate_token.h  password.h  responses.h
www/: auth.js  index.html  javascript_check.js  login.html  style.css
